--- a/source/index.html
+++ b/source/index.html
@@ -1,150 +1,84 @@
-<!DOCTYPE html>
-<html class="page" lang="ru">
+{% set pageId = 0 %}
+{% set permalink = pages[pageId].path %}
+{% extends "./templates/_layout.twig" %}
 
-<head>
-	<meta charset="UTF-8">
-	<title>CAT ENERGY</title>
-</head>
-
-<body class="page__body">
-	<header class="page-header">
-		<a class="page-header__logo" href="index.html">
-			<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy." width="70" height="60">
-			<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy." width="117" height="21">
-		</a>
-		<nav class="main-nav">
-			<button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
-			<ul class="main-nav__list site-list">
-				<li class="site-list__item site-list__item--current">
-					<a href="index.html" aria-current="page">
-						Главная
-					</a>
-				</li>
-				<li class="site-list__item">
-					<a href="catalog.html">
-						Каталог продукции
-					</a>
-				</li>
-				<li class="site-list__item">
-					<a href="form.html">
-						Подбор продукции
-					</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<main class="main-container">
-		<section class="cat-energy-description">
-			<h1 class="cat-energy-description__title">Функциональное
-				питание для котов</h1>
-			<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
-			<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
-			<img class="cat-energy-description_img" src="http://placekitten.com/280/270" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы.">
-		</section>
-		<ul class="program-type">
-			<li class="program-type__card program-type__card--slim">
-				<h2 class="program-type__card-title">Похудение</h2>
-				<p class="program-type__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-				<a class="program-type__card-button" href="catalog.html">каталог slim</a>
+{% block main %}
+<main class="main-container">
+	<section class="cat-energy-description">
+		<h1 class="cat-energy-description__title">Функциональное
+			питание для котов</h1>
+		<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
+		<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
+		<img class="cat-energy-description_img" src="http://placekitten.com/280/270" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы.">
+	</section>
+	<ul class="program-type">
+		<li class="program-type__card program-type__card--slim">
+			<h2 class="program-type__card-title">Похудение</h2>
+			<p class="program-type__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+			<a class="program-type__card-button" href="catalog.html">каталог slim</a>
+		</li>
+		<li class="program-type__card program-type__card--pro">
+			<h2 class="program-type__card-title">Набор массы</h2>
+			<p class="program-type__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+			<a class="program-type__card-button" href="catalog.html">Каталог pro</a>
+		</li>
+	</ul>
+	<section class="advantages">
+		<h2 class="advantages__title">Как это работает</h2>
+		<ul class="advantages__list">
+			<li class="advantages__item advantages__item--icon-leaf">
+				Функциональное питание содержит только полезные питательные вещества.
 			</li>
-			<li class="program-type__card program-type__card--pro">
-				<h2 class="program-type__card-title">Набор массы</h2>
-				<p class="program-type__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-				<a class="program-type__card-button" href="catalog.html">Каталог pro</a>
+			<li class="advantages__item advantages__item--icon-pot">Выпускается в виде порошка,
+				который нужно лишь залить
+				кипятком и готово.
+			</li>
+			<li class="advantages__item advantages__item--icon-cutlery">
+				Замените один-два приема
+				обычной еды на наше
+				функциональное питание.
+			</li>
+			<li class="advantages__item advantages__item--icon-alarm">
+				Уже через месяц наслаждайтесь
+				изменениями к лучшему
+				вашего питомца!
 			</li>
 		</ul>
-		<section class="advantages">
-			<h2 class="advantages__title">Как это работает</h2>
-			<ul class="advantages__list">
-				<li class="advantages__item advantages__item--icon-leaf">
-					Функциональное питание содержит только полезные питательные вещества.
-				</li>
-				<li class="advantages__item advantages__item--icon-pot">Выпускается в виде порошка,
-					который нужно лишь залить
-					кипятком и готово.
-				</li>
-				<li class="advantages__item advantages__item--icon-cutlery">
-					Замените один-два приема
-					обычной еды на наше
-					функциональное питание.
-				</li>
-				<li class="advantages__item advantages__item--icon-alarm">
-					Уже через месяц наслаждайтесь
-					изменениями к лучшему
-					вашего питомца!
-				</li>
-			</ul>
-		</section>
-		<section class="example">
-			<h2 class="example__title">Живой пример</h2>
-			<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-			<dl class="example__result-list">
-				<div class="example__result-item">
-					<dt class="example__result-number">5 кг</dt>
-					<dd class="example__result-description">снижение веса</dd>
-				</div>
-				<div class="example__result-item">
-					<dt class="example__result-number">60 дней</dt>
-					<dd class="example__result-description">затрачено времени</dd>
-				</div>
-				<div class="example__result-item">
-					<dt class="example__result-number example__result-number--total">15 000 РУБ.</dt>
-					<dd class="example__result-description example__result-description--total">Затраты на питание:</dd>
-				</div>
-			</dl>
+	</section>
+	<section class="example">
+		<h2 class="example__title">Живой пример</h2>
+		<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+		<dl class="example__result-list">
+			<div class="example__result-item">
+				<dt class="example__result-description">Снижение веса</dt>
+				<dd class="example__result-number">5 кг</dd>
+			</div>
+			<div class="example__result-item">
+				<dt class="example__result-description">Затрачено времени</dt>
+				<dd class="example__result-number">60 дней</dd>
+			</div>
+			<div class="example__result-item">
+				<dt class="example__result-description example__result-description">Затраты на питание:</dt>
+				<dd class="example__result-number example__result-number">15 000 РУБ.</dd>
+			</div>
+		</dl>
 
-
-			<div class="before-after-slider">
-				<img class="before-after-slider__image before-after-slider__image--before" src="http://placekitten.com/280/256" alt="Толстый кот до похудения.">
-				<button class="before-after-slider__button" type="button"></button>
-				<img class="before-after-slider__image before-after-slider__image--after" src="http://placekitten.com/280/256" alt="Худой кот после похудения.">
-			</div>
-		</section>
-		<section class="cooperation">
-			<h2 class="cooperation__title">приглашаем
-				к сотрудничеству
-				дилеров!</h2>
-			<p class="cooperation__adress-street">ул. Большая
-				Конюшенная, д. 19/8</p>
-			<p class="cooperation__adress-city">Санкт-Петербург</p>
-			<div class="cooperation__adress-map map">
-				<img class="map__image" src="http://placekitten.com/320/362" alt="#">
-			</div>
-		</section>
-	</main>
-	<footer class="main-footer">
-		<div class="main-footer__wrapper">
-			<div class="main-footer__logo">
-				<a class="main-footer__logo-link" href="index.html">
-					<img class="logo-text" src="http://placekitten.com/128/24" alt="Cat Energy." width="128" height="24">
-				</a>
-			</div>
-			<div class="main-footer__social">
-				<h2 class="visually-hidden">Социальные Сети Кэт Энержи</h2>
-				<ul class="main-footer__social-list">
-					<li class="main-footer__social-item">
-						<h3 class="visually-hidden">Вконтакте</h3>
-						<a class="main-footer__social-item-vk" href="#">
-						</a>
-					</li>
-					<li class="main-footer__social-item">
-						<h3 class="visually-hidden">YouTube</h3>
-						<a class="main-footer__social-item-youtube" href="#">
-						</a>
-					</li>
-					<li class="main-footer__social-item">
-						<h3 class="visually-hidden">Телеграм</h3>
-						<a class="main-footer__social-item-telegram" href="#">
-						</a>
-					</li>
-				</ul>
-			</div>
-			<div class="main-footer__copyright">
-				<a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-					<h2 class="main-footer__copyright-title">HTML Academy</h2>
-					<img class="main-footer__copyright-logo-img" src="http://placekitten.com/27/34" alt="Логотип HTML Academy.">
-				</a>
-			</div>
+		<div class="before-after-slider">
+			<img class="before-after-slider__image before-after-slider__image--before" src="http://placekitten.com/280/256" alt="Толстый кот до похудения.">
+			<button class="before-after-slider__button" type="button"></button>
+			<img class="before-after-slider__image before-after-slider__image--after" src="http://placekitten.com/280/256" alt="Худой кот после похудения.">
 		</div>
-	</footer>
-</body>
+	</section>
+	<section class="cooperation">
+		<h2 class="cooperation__title">приглашаем
+			к сотрудничеству
+			дилеров!</h2>
+		<p class="cooperation__adress-street">ул. Большая
+			Конюшенная, д. 19/8</p>
+		<p class="cooperation__adress-city">Санкт-Петербург</p>
+		<div class="cooperation__adress-map map">
+			<img class="map__image" src="http://placekitten.com/320/362" alt="#">
+		</div>
+	</section>
+</main>
+{% endblock %}
