add styles for index and catalog

--- a/source/index.html
+++ b/source/index.html
@@ -58,8 +58,8 @@
 				<dd class="example__result-number">60 дней</dd>
 			</div>
 			<div class="example__result-item">
-				<dt class="example__result-description example__result-description">Затраты на питание:</dt>
-				<dd class="example__result-number example__result-number">15 000 РУБ.</dd>
+				<dt class="example__result-description example__result-description--total">Затраты на питание:</dt>
+				<dd class="example__result-number example__result-number--total">15 000 РУБ.</dd>
 			</div>
 		</dl>
 
@@ -70,12 +70,13 @@
 		</div>
 	</section>
 	<section class="cooperation">
+		<div class="cooperation__adress-wrapper">
 		<h2 class="cooperation__title">приглашаем
 			к сотрудничеству
 			дилеров!</h2>
-		<p class="cooperation__adress-street">ул. Большая
-			Конюшенная, д. 19/8</p>
-		<p class="cooperation__adress-city">Санкт-Петербург</p>
+		<p class="cooperation__adress-adress">ул. Большая Конюшенная, д. 19/8
+			Санкт-Петербург</p>
+		</div>
 		<div class="cooperation__adress-map map">
 			<img class="map__image" src="http://placekitten.com/320/362" alt="#">
 		</div>
