--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,12 +5,15 @@
 {% block main %}
 <main class="main-container">
 	<section class="catalog">
-		<h1>Каталог продукции</h1>
+		<h1 class="catalog__title">Каталог продукции</h1>
 		<ul class="catalog__card-list">
 			<li class="catalog__card-item product-card">
+				<div class="product-card__wrapper">
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy PRO
 						500 г</h3>
+				</a>
+				<a class="product-card__link-img" href="#">
 					<img class="product-card__img" src="http://placekitten.com/140/112" alt="">
 				</a>
 				<div class="product-card__description">
@@ -20,6 +23,7 @@
 					<p class="product-card__description-value">Курица</p>
 					<p class="product-card__description-item">Цена</p>
 					<p class="product-card__description-value">700 ₽</p>
+				</div>
 				</div>
 				<a class="product-card__button button" href="#">Заказать</a>
 
@@ -140,26 +144,31 @@
 		<ul class="additional-catalog__list">
 			<li class="additional-catalog__item additional-product-card">
 				<h3 class="additional-product-card__label">Сахарозаменитель</h3>
+				<div class="additional-product-card__discription">
 				<p class="additional-product-card__quantity">1 упаковка (100 г)</p>
-				<p class="additional-product-card__price">200 ₽</p>
+				<p class="additional-product-card__price">200 ₽</p></div>
 				<a class="additional-product-card__button button" href="#">Заказать</a>
 			</li>
 			<li class="additional-catalog__item additional-product-card">
 				<h3 class="additional-product-card__label">Питьевая вода</h3>
+				<div class="additional-product-card__discription">
 				<p class="additional-product-card__quantity">5 литров</p>
-				<p class="additional-product-card__price">50 ₽</p>
+				<p class="additional-product-card__price">50 ₽</p></div>
 				<a class="additional-product-card__button button" href="#">Заказать</a>
 			</li>
 			<li class="additional-catalog__item additional-product-card">
 				<h3 class="additional-product-card__label">Молоко</h3>
+				<div class="additional-product-card__discription">
 				<p class="additional-product-card__quantity">1 литр</p>
-				<p class="additional-product-card__price">100 ₽</p>
+				<p class="additional-product-card__price">100 ₽</p></div>
 				<a class="additional-product-card__button button" href="#">Заказать</a>
 			</li>
 			<li class="additional-catalog__item additional-product-card">
+
 				<h3 class="additional-product-card__label">Витамины</h3>
+				<div class="additional-product-card__discription">
 				<p class="additional-product-card__quantity">1 упаковка (30 г)</p>
-				<p class="additional-product-card__price">300 ₽</p>
+				<p class="additional-product-card__price">300 ₽</p></div>
 				<a class="additional-product-card__button button" href="#">Заказать</a>
 			</li>
 		</ul>
@@ -167,16 +176,17 @@
 			<h3 class="visually-hidden">Промоакция</h3>
 			<p class="promotion__description">Закажите все
 				и получите чехол для
-				кота в подарок!</p>
+				кота в подарок!</p></div>
 		</article>
 	</section>
 	<section class="cooperation">
-		<h2 class="cooperation__title">Приглашаем
+		<div class="cooperation__adress-wrapper">
+		<h2 class="cooperation__title">приглашаем
 			к сотрудничеству
 			дилеров!</h2>
-		<p class="cooperation__adress-street">ул. Большая
-			Конюшенная, д. 19/8</p>
-		<p class="cooperation__adress-city">Санкт-Петербург</p>
+		<p class="cooperation__adress-adress">ул. Большая Конюшенная, д. 19/8
+			Санкт-Петербург</p>
+		</div>
 		<div class="cooperation__adress-map map">
 			<img class="map__image" src="http://placekitten.com/320/362" alt="#">
 		</div>
