add fixes forstyles

--- a/source/form.html
+++ b/source/form.html
@@ -28,7 +28,7 @@
 			</label>
 		</fieldset>
 		<fieldset class="contacts">
-			<legend class="contacts__title legend-title">
+			<legend class="contacts__title extra-form-title">
 				Контактные данные (владельца кота)
 			</legend>
 			<label class="contacts__label label" for="email">E-mail:<span aria-hidden="true">*</span></label>
@@ -37,11 +37,11 @@
 			<input class="contacts__field field" id="phone" name="phone" type="number" placeholder="8 (960) 900-60-90" required>
 		</fieldset>
 		<div class="comment">
-			<label class="comment__title legend-title" for="comment">Комментарий</label>
+			<label class="comment__title extra-form-title" for="comment">Комментарий</label>
 			<input class="comment__field field" name="comment" type="text" id="comment" placeholder="Расскажите обо всех повадках кота">
 		</div>
 		<fieldset class="additional">
-			<legend class="additional__title legend-title">Дополнительно</legend>
+			<legend class="additional__title  extra-form-title">Дополнительно</legend>
 			<ul class="additional__product-list">
 				<li class="additional__product-item">
 					<label class="additional__product-title">
