add adaptive grids

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 <main class="main-container">
-	<section class="catalog">
+	<section class="catalog page__centerer">
 		<h1 class="catalog__title">Каталог продукции</h1>
 		<ul class="catalog__card-list">
 			<li class="catalog__card-item product-card">
@@ -139,7 +139,7 @@
 			</li>
 		</ul>
 	</section>
-	<section class="additional-catalog">
+	<section class="additional-catalog page__centerer">
 		<h2 class="additional-catalog__label">Дополнительные товары</h2>
 		<ul class="additional-catalog__list">
 			<li class="additional-catalog__item additional-product-card">
@@ -172,7 +172,7 @@
 				<a class="additional-product-card__button button" href="#">Заказать</a>
 			</li>
 		</ul>
-		<article class="promotion">
+		<article class="additional-catalog__promotion promotion">
 			<h3 class="visually-hidden">Промоакция</h3>
 			<p class="promotion__description">Закажите все
 				и получите чехол для
