--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 		<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
 		<img class="cat-energy-description_img" src="http://placekitten.com/280/270" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы.">
 	</section>
-	<ul class="program-type">
+	<ul class="program-type page__centerer">
 		<li class="program-type__card program-type__card--slim">
 			<h2 class="program-type__card-title">Похудение</h2>
 			<p class="program-type__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
@@ -23,7 +23,7 @@
 			<a class="program-type__card-button" href="catalog.html">Каталог pro</a>
 		</li>
 	</ul>
-	<section class="advantages">
+	<section class="advantages page__centerer">
 		<h2 class="advantages__title">Как это работает</h2>
 		<ul class="advantages__list">
 			<li class="advantages__item advantages__item--icon-leaf">
@@ -46,6 +46,7 @@
 		</ul>
 	</section>
 	<section class="example">
+
 		<h2 class="example__title">Живой пример</h2>
 		<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 		<dl class="example__result-list">
@@ -57,18 +58,19 @@
 				<dt class="example__result-description">Затрачено времени</dt>
 				<dd class="example__result-number">60 дней</dd>
 			</div>
-			<div class="example__result-item">
+			<div class="example__result-item example__result-item--total ">
 				<dt class="example__result-description example__result-description--total">Затраты на питание:</dt>
 				<dd class="example__result-number example__result-number--total">15 000 РУБ.</dd>
 			</div>
 		</dl>
 
-		<div class="before-after-slider">
+
+		<div class="example__slider before-after-slider">
 			<img class="before-after-slider__image before-after-slider__image--before" src="http://placekitten.com/280/256" alt="Толстый кот до похудения.">
 			<button class="before-after-slider__button" type="button"></button>
 			<img class="before-after-slider__image before-after-slider__image--after" src="http://placekitten.com/280/256" alt="Худой кот после похудения.">
 		</div>
-	</section>
+		</section>
 	<section class="cooperation">
 		<div class="cooperation__adress-wrapper">
 		<h2 class="cooperation__title">приглашаем
